--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
     "baseUrl": ".",
     "paths": {
       "@components": ["src/components/index.ts"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@assets": ["src/assets/index.ts"],
+      "@assets/*": ["src/assets/*"]
     }
   },
   "include": ["src"],
